2007-09-05  Goedson Teixeira Paixao  <goedson@debian.org>

	* configure.in: Updated version number to 2.2.3

2007-09-01  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/journal.c (on_save_clicked_cb): Use GtkFileChooserDialog for
	the file selection. This simplifies the code and also fixes the
	problem of a hidden question dialog when overwriting file, as
	reported in the Debian Bug Tracking System at
	http://bugs.debian.org/422023 .
	(task_paste_clicked_cb): Don't use gtt_task_copy when pasting the
	task, since it doesn't copy the time intervals list. Fixes bug
	#1522802.

	* src/menus.c (menu_main_edit): Fixed Paste project menu entry. It
	was associated with the cut_project function.

2007-08-31  Goedson Teixeira Paixao  <goedson@debian.org>

	* Applied patch by Quentin Harley for currency symbol
	  configuration with some changes to allow for locale based
	  formating of currency values. Details about the changed files
	  bellow.
	
	* glade/prefs.glade: Added GUI elements for the currency formating
	options.

	* ghtml/C/gtt.scm (gtt-task-billable-value-str): Removed hard
	coded formating of zero values. It's now done inside ghtml.c.

	* src/gconf-io.c (gtt_gconf_save, gtt_gconf_load): Added support
	for loading and saving currency formating options.

	* src/prefs.h: Added configuration for currency formating.

	* src/prefs.c (currency_sensitive_cb, currency_options)
	(prefs_set, options_dialog_set, prefs_dialog_new): Added
	configuration for currency formating.

	* src/ghtml.c (task_get_value_str_scm): Added support for
	localized monetary formating.

2007-08-30  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/main.c (read_data): Changed to support reloading of the
	projects data

	* src/notes-area.c (notes_area_set_project): handle proj == NULL
	as removing the current reference from the notes area, so we
	can do it before reloading data.

	* src/dbus.xml: Added interface for the file method

	* src/gtt.h: Added prototype of the read_data function
